# cos-cpp-sdk-v5

./: .gitignore  .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt
include/: cos_config.h
include/op/: cos_result.h
include/util/: test_utils.h
src/: CMakeLists.txt  cos_api.cpp  cos_config.cpp
src/op/: object_op.cpp
unittest/: CMakeLists.txt
